Moved PlayerQuests into its own file
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@882 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -258,6 +258,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerQuests.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Players.cpp"
 					>
 				</File>
@@ -461,6 +465,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerQuests.h"
 					>
 				</File>
 				<File
