Moved Map to its own file
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@883 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -234,6 +234,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\Map.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Maps.cpp"
 					>
 				</File>
@@ -441,6 +445,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\LuaScriptable.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Map.h"
 					>
 				</File>
 				<File
