Added storage support. Currently only supporting storing mesos.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@948 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -326,6 +326,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\StoragePacket.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\TradesPacket.cpp"
 					>
 				</File>
@@ -407,6 +411,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerSkills.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerStorage.cpp"
 					>
 				</File>
 			</Filter>
@@ -560,6 +568,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\StoragePacket.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\TradesPacket.h"
 					>
 				</File>
@@ -641,6 +653,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerSkills.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerStorage.h"
 					>
 				</File>
 			</Filter>
