--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -140,7 +140,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib lua.x86.release.lib common.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="src/Common/lua;src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common"
+				AdditionalLibraryDirectories="src/Common/lua;src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ProgramFiles)/boost/boost_1_35_0/lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
