- Moved MAPLE_VERSION to MapleVersion.h  - Added MAPLE_VERSION_UNK to MapleVersion.h (was: hard-coded 0x08)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@992 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -412,6 +412,10 @@
 					RelativePath=".\src\Common\MapleEncryption.h"
 					>
 				</File>
+				<File
+					RelativePath=".\src\Common\MapleVersion.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Timer"
