Moved Combo attack coding to PlayerSkills, and removed SkillsPacket::showCombo. Also moved SkillTimer and CoolTimer to their own files, and setup the TYPE enum to start at 0 for direct compatibility with the types arrays.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1039 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -418,6 +418,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Timers"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\SkillTimer.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -657,6 +665,14 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerStorage.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Timers"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\SkillTimer.h"
 					>
 				</File>
 			</Filter>
