Split ItemTimer into its own file for lulz and win.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1045 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -422,6 +422,10 @@
 				Name="Timers"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\ItemTimer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\SkillTimer.cpp"
 					>
 				</File>
@@ -671,6 +675,10 @@
 			<Filter
 				Name="Timers"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\ItemTimer.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\SkillTimer.h"
 					>
