- max_multi_level of 0 now disables multi-level  - max_multi_level of -1 now allows infinite multi-level (as far as the exp allows)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1057 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/conf/worlds.lua.sample
+++ b/conf/worlds.lua.sample
@@ -19,10 +19,11 @@ world0_droprate = 1;
 -- Channels will run on port world port + channel number
 -- i.e. channel one will run on 7101 and channel 2 will run on 7102
 world0_port = 7100;
-world0_max_multi_level = 1;
 -- How many times do you want your users to level up at once?
--- 1 is global-like/default
--- 0 is as many times as the EXP allows
+--  1 is global-like/default
+--  0 is disabled leveling
+-- -1 is as many times as the EXP allows
+world0_max_multi_level = 1;
 
 -- Uncomment for another world
 -- world1_name = "Bera";
