Fixed boost library searching in release mode
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1058 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -125,6 +125,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalLibraryDirectories="$(ProgramFiles)/boost/boost_1_35_0/lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
