Changed the way winsocks.h is included (now using WinSockInclude.h proxy file)
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1085 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -397,6 +397,10 @@
 					RelativePath=".\src\Common\Selector.h"
 					>
 				</File>
+				<File
+					RelativePath=".\src\Common\WinSockInclude.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Decoder"
