New timer system! Currently it is only used for ping (NewTimer class will be renamed to Timer once everything has migrated to it)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1109 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -256,6 +256,10 @@
 				Name="Timer"
 				>
 				<File
+					RelativePath=".\src\Common\NewTimer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Timer.cpp"
 					>
 				</File>
@@ -425,6 +429,10 @@
 			<Filter
 				Name="Timer"
 				>
+				<File
+					RelativePath=".\src\Common\NewTimer.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\Common\Timer.h"
 					>
