Moved combo tracking from PlayerSkills into PlayerActiveBuffs
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1136 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -422,6 +422,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerActiveBuffs.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.cpp"
 					>
 				</File>
@@ -693,6 +697,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\Player.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerActiveBuffs.h"
 					>
 				</File>
 				<File
