--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="src/Common;src/Common/mysql;&quot;$(ProgramFiles)/boost/boost_1_35_0/&quot;"
+				AdditionalIncludeDirectories="src/Common;src/Common/mysql;src/Libraries;$(ProgramFiles)/boost/boost_1_35_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
@@ -62,9 +62,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp_d.lib lua.x86.debug.lib common.lib"
+				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp_d.lib lua.lib common.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="src/Common/lua;src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ProgramFiles)/boost/boost_1_35_0/lib"
+				AdditionalLibraryDirectories="src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ConfigurationName)/lua;$(ProgramFiles)/boost/boost_1_35_0/lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="1"
@@ -119,7 +119,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Common;src/Common/mysql;$(ProgramFiles)/boost/boost_1_35_0/"
+				AdditionalIncludeDirectories="src/Common;src/Common/mysql;src/Libraries;$(ProgramFiles)/boost/boost_1_35_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -138,9 +138,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib lua.x86.release.lib common.lib"
+				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib lua.lib common.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="src/Common/lua;src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ProgramFiles)/boost/boost_1_35_0/lib"
+				AdditionalLibraryDirectories="src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ConfigurationName)/lua;$(ProgramFiles)/boost/boost_1_35_0/lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
