Moved mysql and mysql++ from src/Common to src/Libraries
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1175 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="src/Common;src/Common/mysql;src/Libraries;$(ProgramFiles)/boost/boost_1_35_0/"
+				AdditionalIncludeDirectories="src/Common;src/Libraries;$(ProgramFiles)/boost/boost_1_35_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
@@ -64,7 +64,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp_d.lib lua.lib common.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ConfigurationName)/lua;$(ProgramFiles)/boost/boost_1_35_0/lib"
+				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;$(ConfigurationName)/lua;$(ProgramFiles)/boost/boost_1_35_0/lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="1"
@@ -119,7 +119,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Common;src/Common/mysql;src/Libraries;$(ProgramFiles)/boost/boost_1_35_0/"
+				AdditionalIncludeDirectories="src/Common;src/Libraries;$(ProgramFiles)/boost/boost_1_35_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -140,7 +140,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib lua.lib common.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="src/Common/mysql;src/Common/mysql++;$(ConfigurationName)/Common;$(ConfigurationName)/lua;$(ProgramFiles)/boost/boost_1_35_0/lib"
+				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;$(ConfigurationName)/lua;$(ProgramFiles)/boost/boost_1_35_0/lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
