- Abstracted player movement to its own source file
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1199 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -238,6 +238,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\Movement.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\NPCs.cpp"
 					>
 				</File>
@@ -505,6 +509,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Mobs.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Movement.h"
 					>
 				</File>
 				<File
