- Abstracted positional information out of Player and Mob into MovableLife  - Movement parsing generalized for MovableLife  - Better unknown movement error message
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1224 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -512,6 +512,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\MovableLife.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Movement.h"
 					>
 				</File>
