Renamed Config (lua configuration reading class) to ConfigFile
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1292 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -164,7 +164,7 @@
 				Name="DataBaseManager"
 				>
 				<File
-					RelativePath=".\src\Common\Config.cpp"
+					RelativePath=".\src\Common\ConfigFile.cpp"
 					>
 				</File>
 				<File
@@ -326,7 +326,7 @@
 				Name="DataBaseManager"
 				>
 				<File
-					RelativePath=".\src\Common\Config.h"
+					RelativePath=".\src\Common\ConfigFile.h"
 					>
 				</File>
 				<File
