--- a/conf/worlds.lua.sample
+++ b/conf/worlds.lua.sample
@@ -15,15 +15,18 @@ world0_exprate = 1;
 world0_questexprate = 1;
 world0_mesorate = 1;
 world0_droprate = 1;
--- What port should the world server listen on?
--- Channels will run on port world port + channel number
--- i.e. channel one will run on 7101 and channel 2 will run on 7102
-world0_port = 7100;
+-- Max AP you'll allow a user to put into their core stats?
+world0_maxstats = 999;
 -- How many times do you want your users to level up at once?
 --  1 is global-like/default
 --  0 is disabled leveling
 -- -1 is as many times as the EXP allows
 world0_max_multi_level = 1;
+-- What port should the world server listen on?
+-- Channels will run on port world port + channel number
+-- i.e. channel one will run on 7101 and channel 2 will run on 7102
+world0_port = 7100;
+
 
 -- Uncomment for another world
 -- world1_name = "Bera";
@@ -34,5 +37,6 @@ world0_max_multi_level = 1;
 -- world1_questexprate = 1;
 -- world1_mesorate = 1;
 -- world1_droprate = 1;
--- world1_port = 7200;
+-- world1_maxstats = 999;
 -- world1_max_multi_level = 1;
+-- world1_port = 7200;
