- Abstracted buff processing out of Skills namespace
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1398 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -190,6 +190,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\Buffs.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\ChannelServer.cpp"
 					>
 				</File>
@@ -461,6 +465,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\BuddyList.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Buffs.h"
 					>
 				</File>
 				<File
