Renamed BuddyList to PlayerBuddyList
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1424 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -186,10 +186,6 @@
 				Name="ChannelServer"
 				>
 				<File
-					RelativePath=".\src\ChannelServer\BuddyList.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\src\ChannelServer\Buffs.cpp"
 					>
 				</File>
@@ -434,6 +430,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerBuddyList.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.cpp"
 					>
 				</File>
@@ -463,10 +463,6 @@
 			<Filter
 				Name="ChannelServer"
 				>
-				<File
-					RelativePath=".\src\ChannelServer\BuddyList.h"
-					>
-				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Buffs.h"
 					>
@@ -713,6 +709,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerActiveBuffs.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerBuddyList.h"
 					>
 				</File>
 				<File
