Added basic buddy list operation (single player only!) (NOT FOR PRODUCTION USE)
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1449 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -186,6 +186,10 @@
 				Name="ChannelServer"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\BuddyListHandler.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Buffs.cpp"
 					>
 				</File>
@@ -464,6 +468,10 @@
 				Name="ChannelServer"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\BuddyListHandler.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Buffs.h"
 					>
 				</File>
@@ -575,6 +583,14 @@
 			<Filter
 				Name="Packets"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\BuddyListPacket.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\BuddyListPacket.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\DropsPacket.h"
 					>
