--- a/Common.vcproj
+++ b/Common.vcproj
@@ -180,6 +180,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\PacketReader.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\PingPacket.cpp"
 					>
 				</File>
@@ -229,10 +233,6 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\MapleSession.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\src\Common\ReadPacket.cpp"
 					>
 				</File>
 				<File
@@ -346,6 +346,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\PacketReader.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\PingPacket.h"
 					>
 				</File>
@@ -423,10 +427,6 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\MapleSession.h"
-					>
-				</File>
-				<File
-					RelativePath=".\src\Common\ReadPacket.h"
 					>
 				</File>
 				<File
