- Renamed MySQLM.h to Database.h  - Renamed MySQLM.cpp to Database.cpp  - Adds winsock2.h include on WIN32 in Database.h to avoid include order dependency with boost::asio
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1520 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -168,7 +168,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\Common\MySQLM.cpp"
+					RelativePath=".\src\Common\Database.cpp"
 					>
 				</File>
 			</Filter>
@@ -334,7 +334,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\Common\MySQLM.h"
+					RelativePath=".\src\Common\Database.h"
 					>
 				</File>
 			</Filter>
