Added DNS lookup support for external_ip configuration directive
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1540 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -224,6 +224,10 @@
 				Name="Utilities"
 				>
 				<File
+					RelativePath=".\src\Common\MiscUtilities.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Randomizer.cpp"
 					>
 				</File>
