Renamed [InterServer]PlayerPacket to [InterServer]Packet
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1549 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -243,7 +243,7 @@
 					Name="ServerToServer"
 					>
 					<File
-						RelativePath=".\src\LoginServer\LoginServerAcceptPlayerPacket.cpp"
+						RelativePath=".\src\LoginServer\LoginServerAcceptPacket.cpp"
 						>
 					</File>
 				</Filter>
@@ -289,7 +289,7 @@
 					Name="ServerToServer"
 					>
 					<File
-						RelativePath=".\src\LoginServer\LoginServerAcceptPlayerPacket.h"
+						RelativePath=".\src\LoginServer\LoginServerAcceptPacket.h"
 						>
 					</File>
 				</Filter>
