Made the timer system more flexible
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1552 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -502,6 +502,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\Timer\Time.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Timer\Timer.h"
 					>
 				</File>
